...
    <TextView
        android:id="@+id/gameDealPriceTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Powered by CheapShark.com"
        app:layout_constraintEnd_toEndOf="@+id/GameDealSaveDealButton"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/GameDealSaveDealButton"
        app:layout_constraintTop_toBottomOf="@+id/GameDealSaveDealButton" />

    <TextView
        android:id="@+id/GameDealTextView"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/gaming_font"
        android:scrollbarSize="5sp"
        android:scrollbarThumbVertical="@color/AppWhite"
...
